maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:14: error: not found: value conditionSuivreMur
      conditionSuivreMur(droite(), gauche())
      ^IslandMaze:25: error: not found: value conditionSuivreMur
          conditionSuivreMur(gauche(), droite())
          ^IslandMaze:26: error: not found: value conditionSuivreMur
        else conditionSuivreMur(droite(), gauche())
             ^